Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/First_Year_Software_Total__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Software_Total__c</fullName>
    <description>This field is a summary rollup of quote line group by Product Type Software and Segment index 1.</description>
    <label>First Year Software Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>