Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Free_month_approver_Level__c.field-meta.xml
<CustomField>
    <fullName>Free_month_approver_Level__c</fullName>
    <description>Developed as a part of approval process Ticket BIZ-46489
Update for BIZ-45146</description>
    <formula>IF(Free_Months__c = 0 ,0,
IF(Free_Months__c = 1 &amp;&amp; (First_Year_Software_Net_Total__c &gt; 10000),1,
IF((Free_Months__c &gt;= 1 &amp;&amp; Free_Months__c &lt;= 3) &amp;&amp; (First_Year_Software_Net_Total__c &lt; 10000),1,
IF(Free_Months__c = 2,2,
IF(Free_Months__c = 3,3,
IF(Free_Months__c &gt; 3 &amp;&amp; (First_Year_Software_Net_Total__c &lt; 10000),8,
5))))
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Free month approver Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>