Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Free_Months__c.field-meta.xml
<CustomField>
    <fullName>Free_Months__c</fullName>
    <defaultValue>0</defaultValue>
    <description>BIZ-718</description>
    <inlineHelpText>Enter number of months the customer applied to all the quote subscription products</inlineHelpText>
    <label>Free Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>