Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Future_Pricing_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Future_Pricing_Commitment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Future Pricing Commitment</label>
    <type>Checkbox</type>
</CustomField>