Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Governanceduedate__c.field-meta.xml
<CustomField>
    <fullName>Governanceduedate__c</fullName>
    <description>To populate the due date on Task created as part of story BIZ-45066</description>
    <formula>DATE(YEAR(TODAY()), MONTH(TODAY()), DAY(TODAY()) + 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Governanceduedate</label>
    <type>Date</type>
</CustomField>