Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/GTM_Motion_Tier__c.field-meta.xml
<CustomField>
    <fullName>GTM_Motion_Tier__c</fullName>
    <description>Stores the picklist value of GTM_Motion_Tier__c from account</description>
    <formula>TEXT(SBQQ__Account__r.GTM_Motion_Tier__c)</formula>
    <inlineHelpText>Value of GTM Motion Tier on Account</inlineHelpText>
    <label>GTM Motion Tier</label>
    <type>Text</type>
</CustomField>