Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Has_Partial_Month__c.field-meta.xml
<CustomField>
    <fullName>Has_Partial_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether any subscription Quote Line has a partial first-year term.Created w.r.t BIZ-72051</description>
    <inlineHelpText>Automatically checked when any related Quote Line is marked as a Year-1 Partial.</inlineHelpText>
    <label>Has Partial Month</label>
    <type>Checkbox</type>
</CustomField>