Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Has_Trial_Product__c.field-meta.xml
<CustomField>
    <fullName>Has_Trial_Product__c</fullName>
    <formula>Special_case__c = &apos;exclude term QT-2183&apos;</formula>
    <label>Has Trial Product</label>
    <type>Checkbox</type>
</CustomField>