Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/HeaderFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>HeaderFieldSetName__c</fullName>
    <description>Field to set the quote line editor dynamically</description>
    <formula>IF(ISPICKVAL(SBQQ__Type__c , &apos;Renewal&apos;), &apos;RenewalQuoteLineEditor&apos;, &apos;SBQQ__LineEditor&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HeaderFieldSetName</label>
    <type>Text</type>
</CustomField>