Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Hide_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Hide_Effective_Date__c</fullName>
    <formula>IF(
  show_effective_date__c = false, 
  true,
  false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hide Effective Date</label>
    <type>Checkbox</type>
</CustomField>