Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Hide_Pricing_Columns__c.field-meta.xml
<CustomField>
    <fullName>Hide_Pricing_Columns__c</fullName>
    <formula>Hide_Pricing__c  &amp;&amp;  Total_Subscription_Fees__c &gt;= 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hide Pricing Columns</label>
    <type>Checkbox</type>
</CustomField>