Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Hierarchy_level__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_level__c</fullName>
    <description>Created for story BIZ-50590</description>
    <label>Hierarchy level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>