Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Highest_Approver_level__c.field-meta.xml
<CustomField>
    <fullName>Highest_Approver_level__c</fullName>
    <description>Formula Field to find the Highest approver BIZ-46142
Ticket</description>
    <formula>MAX(InitialTermapproverLevel__c,Free_month_approver_Level__c,Payment_Term_Approver_Level__c,Billing_Frequency_approval_level__c,Minimum_year_approver_level__c,SFA_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Highest Approver level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>