Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Implementation_Service__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Service__c</fullName>
    <description>Created as a part of storyBIZ-45146</description>
    <formula>Software_Net_Total__c &lt;&gt;  0 &amp;&amp;  Services_Net_Total__c &gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Service</label>
    <type>Checkbox</type>
</CustomField>