Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Implementationdiscountlevel__c.field-meta.xml
<CustomField>
    <fullName>Implementationdiscountlevel__c</fullName>
    <description>Level to compare the the max approver level</description>
    <label>Implementationdiscountlevel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>