Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Include_Customer_Reference_Program_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Include_Customer_Reference_Program_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Customer Reference Program Sheet</label>
    <type>Checkbox</type>
</CustomField>