Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Include_Master_Term_Tax_Language__c.field-meta.xml
<CustomField>
    <fullName>Include_Master_Term_Tax_Language__c</fullName>
    <formula>CASE(SBQQ__Account__r.Contract_Term_Version__c,
  &quot;8.5&quot;,&quot;Yes&quot;,
  &quot;8.8&quot;,&quot;Yes&quot;,
  &quot;8,9&quot;,&quot;Yes&quot;,
  &quot;9.0&quot;,&quot;Yes&quot;,
  &quot;9.1&quot;,&quot;Yes&quot;,
  &quot;9.2&quot;,&quot;Yes&quot;,
  &quot;9.3&quot;,&quot;Yes&quot;,
  &quot;9.4&quot;,&quot;Yes&quot;,
  &quot;9.4.1&quot;,&quot;Yes&quot;,
  &quot;9.4v3&quot;,&quot;Yes&quot;,
  &quot;10.1.1&quot;,&quot;Yes&quot;,
  &quot;10.2&quot;,&quot;Yes&quot;,
  &quot;10.2.1&quot;,&quot;Yes&quot;,
  &quot;10.2.2&quot;,&quot;Yes&quot;,
  &quot;10.3&quot;,&quot;Yes&quot;,
  &quot;10.4&quot;,&quot;Yes&quot;,
  &quot;No&quot;
)</formula>
    <label>Include Master Term Tax Language</label>
    <type>Text</type>
</CustomField>