Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Include_Software_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Include_Software_Delivery__c</fullName>
    <formula>AND(
  Software_Products__c &gt; 0,
  NOT(Use_Services_Cover_Sheet__c)
)</formula>
    <label>Include Software Delivery</label>
    <type>Checkbox</type>
</CustomField>