Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Includes_ad_hoc_deal_structure__c.field-meta.xml
<CustomField>
    <fullName>Includes_ad_hoc_deal_structure__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>Indicates if the quote includes ad-hoc deal structure attributes. Created as part of BIZ-75105.</description>
    <label>Includes ad-hoc deal structure?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>