Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Initial_Term_Discount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Term_Discount__c</fullName>
    <formula>IF(
ROUND( Segment_Total_List_Unit_Price__c,2) = 0,
0,
(Segment_Total_List_Unit_Price__c- Segment_Total_Net_unit_Price__c)/Segment_Total_List_Unit_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Term Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>