Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/InitialTermapproverLevel__c.field-meta.xml
<CustomField>
    <fullName>InitialTermapproverLevel__c</fullName>
    <description>Created to calculate the highest discount approval level</description>
    <formula>IF((Initial_Term_Discount__c*100)= 0 ,0,
IF((Initial_Term_Discount__c*100)&gt; 0 &amp;&amp; (Initial_Term_Discount__c*100) &lt;= 20 &amp;&amp; (First_Year_Software_Net_Total__c &gt; 10000) , 1,
IF((Initial_Term_Discount__c*100)&gt; 0 &amp;&amp; (Initial_Term_Discount__c*100) &lt;= 40 &amp;&amp; (First_Year_Software_Net_Total__c &lt; 10000) , 1,
IF((Initial_Term_Discount__c*100) &gt; 20 &amp;&amp; (Initial_Term_Discount__c*100) &lt;= 30, 2,
IF((Initial_Term_Discount__c*100)&gt; 30 &amp;&amp; (Initial_Term_Discount__c*100) &lt;= 40, 3,
IF((Initial_Term_Discount__c*100) &gt; 40 &amp;&amp; (First_Year_Software_Net_Total__c &lt; 10000),3,
IF((Initial_Term_Discount__c*100) &gt; 40 &amp;&amp; (First_Year_Software_Net_Total__c &gt; 10000),5,0)))))
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Term approver Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>