Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Intake_Products__c.field-meta.xml
<CustomField>
    <fullName>Intake_Products__c</fullName>
    <formula>Advanced_Intake_Products__c + Standard_Intake_Products__c + New_Intake_Products__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>