Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Intapp_Account_Number_With_Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Account_Number_With_Subsidiary__c</fullName>
    <formula>SBQQ__Account__r.IntApp_Account_Number__c +
IF(CONTAINS(TEXT(Subsidiary__c), &quot;:&quot;) &amp;&amp; LEFT(TEXT(Subsidiary__c), FIND(&quot;:&quot;, TEXT(Subsidiary__c)) - 1) &lt;&gt; &quot;01&quot;,
  &quot;:&quot; &amp; LEFT(TEXT(Subsidiary__c), FIND(&quot;:&quot;, TEXT(Subsidiary__c)) - 1),
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intapp Account Number With Subsidiary</label>
    <type>Text</type>
</CustomField>