Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Intapp_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Opportunity_Number__c</fullName>
    <formula>SBQQ__Opportunity2__r.IntApp_Opportunity_Number__c</formula>
    <label>Intapp Opportunity Number</label>
    <type>Text</type>
</CustomField>