Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Intapp_Prime__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Prime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is on when Intapp Prime is on the quote</description>
    <label>Intapp Prime</label>
    <type>Checkbox</type>
</CustomField>