Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Intapp_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Quote_Number__c</fullName>
    <description>OP4I Deal ID for Pre-QTC quotes. (not mapped post-QTC)</description>
    <label>OP4I quote #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>