Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Picklist for Software Invoice Date BIZ-45643, Label updated for BIZ-47803</description>
    <label>Software Invoice Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreement Signature</fullName>
                <default>true</default>
                <label>Agreement Signature</label>
            </value>
            <value>
                <fullName>Effective Date</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>