Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Invoicing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The invoicing contact from OP4i and synced via Boomi.</description>
    <inlineHelpText>The Invoicing Contact is maintained in OP4I, and only the order management and the renewal team should update it in SFDC.</inlineHelpText>
    <label>Invoicing Contact (Read Only)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Invoicing Contact)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>