Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Invoicing_Contact_email__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Contact_email__c</fullName>
    <formula>Invoicing_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoicing Contact email</label>
    <type>Text</type>
</CustomField>