Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Invoicing_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Contact_Name__c</fullName>
    <formula>Invoicing_Contact__r.FirstName +&quot; &quot;+ Invoicing_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoicing Contact Name</label>
    <type>Text</type>
</CustomField>