Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Invoicing_Contact_phone__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Contact_phone__c</fullName>
    <formula>Invoicing_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoicing Contact phone</label>
    <type>Text</type>
</CustomField>