Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Invoicing_Contact_title__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Contact_title__c</fullName>
    <formula>Invoicing_Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoicing Contact title</label>
    <type>Text</type>
</CustomField>