Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Not_Bundle_Product_PDF__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_Bundle_Product_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Not Bundle Product PDF</label>
    <type>Checkbox</type>
</CustomField>