Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Last_Modified_Contract_Support_Request__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Contract_Support_Request__c</fullName>
    <description>BIZ-195</description>
    <label>Last Modified Contract Support Request</label>
    <length>18</length>
    <type>Text</type>
</CustomField>