Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Last_quarter_end_date__c.field-meta.xml
<CustomField>
    <fullName>Last_quarter_end_date__c</fullName>
    <description>Created w.r.t BIZ-70012</description>
    <formula>CASE(
IF(
FLOOR(MOD(MONTH(TODAY()) + 5, 12) / 3) + 1 = 1,
4,
FLOOR(MOD(MONTH(TODAY()) + 5, 12) / 3)
),
1, DATE(
IF(MONTH(TODAY()) &lt;= 3, YEAR(TODAY()) - 1, YEAR(TODAY())),
9, 30
),
2, DATE(
IF(MONTH(TODAY()) &lt;= 3, YEAR(TODAY()) - 1, YEAR(TODAY())),
12, 31
),
3, DATE(YEAR(TODAY()), 3, 31),
4, DATE(YEAR(TODAY()), 6, 30),
DATE(9999, 1, 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last quarter end date</label>
    <type>Date</type>
</CustomField>