Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Legacy_Repstor_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Repstor_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for Legacy Repstor Agreement</description>
    <label>Legacy Repstor Agreement</label>
    <type>Checkbox</type>
</CustomField>