Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Liability_Annex_Document_Attached__c.field-meta.xml
<CustomField>
    <fullName>Liability_Annex_Document_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Liability Annex Document attachment acknowledgment checkbox</description>
    <inlineHelpText>I acknowledge that Liability Annex document has been attached to the Quote</inlineHelpText>
    <label>Liability Annex Document Attached</label>
    <type>Checkbox</type>
</CustomField>