Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Logo_s_Highest_Account_GTM_Tier__c.field-meta.xml
<CustomField>
    <fullName>Logo_s_Highest_Account_GTM_Tier__c</fullName>
    <description>BIZ-68618: Stores the picklist value of Logo’s Highest Account GTM Tier from Account</description>
    <formula>TEXT( SBQQ__Account__r.Logo_s_Highest_Account_GTM_Tier__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo’s Highest Account GTM Tier</label>
    <type>Text</type>
</CustomField>