Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Manual_OSA__c.field-meta.xml
<CustomField>
    <fullName>Manual_OSA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually set indicate a Manual OSA</description>
    <label>Manual OSA</label>
    <type>Checkbox</type>
</CustomField>