Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Manual_OSA_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Manual_OSA_Indicator__c</fullName>
    <formula>TEXT(SBQQ__Opportunity2__r.Associated_Contract_OSA__r.Manual_OSA_Indicator__c)</formula>
    <label>Manual OSA Indicator</label>
    <type>Text</type>
</CustomField>