Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/master_product_pins_from_all_quote_lines__c.field-meta.xml
<CustomField>
    <fullName>master_product_pins_from_all_quote_lines__c</fullName>
    <label>Master Product PINS from all quote lines</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>