Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Max_Segment_Index__c.field-meta.xml
<CustomField>
    <fullName>Max_Segment_Index__c</fullName>
    <label>Max Segment Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>