Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Max_YoY_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Max_YoY_Uplift__c</fullName>
    <description>Maximum Year-over-Year uplift. Populated via Apex trigger with OTD calculation for new quotes, or via data migration for historical quotes.</description>
    <inlineHelpText>Maximum YoY uplift percentage.</inlineHelpText>
    <label>Max YoY Uplift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>