Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Meter_type_quote_line__c.field-meta.xml
<CustomField>
    <fullName>Meter_type_quote_line__c</fullName>
    <label>Meter type quote line</label>
    <length>200</length>
    <type>Text</type>
</CustomField>