Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Migration_Contract__c.field-meta.xml
<CustomField>
    <fullName>Migration_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Migration Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Quotes (Migration Contract)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>